k8s/cilium/gateway/routes/nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-route
spec:
  parentRefs:
    - name: main-gateway
  hostnames:
    - "macca.casa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /nginxle
      backendRefs:
        - name: nginx
          port: 80
