k8s/cilium/gateway/routes/route.redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: macca.casa-http-redirect
  namespace: default
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
    sectionName: macca.casa-http
  hostnames:
  - "*.macca.casa"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
