k8s/cilium/gateway/routes/route.rewrite.example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nxp-http
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
  hostnames:
    - "*.macca.casa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /to-rewrite
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/with-this" # (can be / too!)
      backendRefs:
        - name: proxy-deployment
          port: 80
